# ray_tracing_rs

./: .cspell.json  .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: test.yml
examples/: exercise1.rs  main.rs
src/: camera.rs  color.rs  geometry.rs  hittable.rs  interval.rs  lib.rs  material.rs  object.rs  ray.rs  render.rs  shape.rs  utils.rs  vec3.rs
src/camera/: params.rs
src/geometry/: vec3.rs
src/hittable/: sphere.rs
src/material/: dilectric.rs  lambertian.rs  metal.rs  scatter.rs  texture.rs
src/object/: hittable.rs  hittable_list.rs  material.rs  sphere.rs
src/shape/: sphere.rs
