[package]
name = "ray_tracing_rs"
version = "0.1.0"
authors = ["Kotaro Uetake <kotaro.uetake@tier4.jp>"]
edition = "2021"
description = "Rust binding of Ray Tracing: The Next Week"
readme = "README.md"
license = "Apatch 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
