[package]
name = "raytrs"
version = "0.1.0"
authors = ["Kotaro Uetake <kotaro.uetake@tier4.jp>"]
edition = "2021"
repository = "https://github.com/ktro2828/ray_tracing_rs"
description = "Rust binding of Ray Tracing: The Next Week"
readme = "README.md"
license = "Apatch 2.0"
license-file = "LICENCE"
keywords = ["ray_tracing", "rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
katexit = "0.1.4"
rand = "0.8.5"
rayon = "1.8.0"
